Fix for distorted images

--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -18,6 +18,7 @@
     max-width: 300px;
     width: 100%;
     align-self: center;
+    object-fit: cover;
 }
 
 
