--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -7,6 +7,8 @@
     border-radius: 10px;
     margin-block: 5px;
     background-image: url('/wood.jpg');
+    box-shadow: 3px 2px 5px rgb(0, 0, 0);
+    margin-inline: 10px;
     
 }
 
@@ -21,6 +23,7 @@
     border-radius: 50%;
     border: 1px solid lightgray;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .list-info-container {
