--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ a {
 
   display: flex;
   flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.4);
 
   /* padding: 10px; */
   font-family: "Lora", serif;
